--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,9 @@
-
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
 /node_modules
 /.pnp
 .pnp.js
-.yarn/install-state.gz
 
 # testing
 /coverage
@@ -25,14 +23,13 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-firebase-debug.log*
 
 # local env files
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+.env
 
 # vercel
 .vercel
@@ -40,6 +37,3 @@ firebase-debug.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
-
-# studio
-.firebase/
